--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -75,6 +75,30 @@ button:focus {
   background-color: #6c8cff;
 }
 
+.addMore {
+  display: block;
+  color: #ffffff;
+  background-color: #4e75ff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: 4%;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 8px;
+  min-width: 91px;
+  height: 40px;
+  border: none;
+  padding: 8px 16px;
+  margin-top: 32px;
+}
+
+.addMore:hover,
+.addMore:focus {
+  background-color: #6c8cff;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
